src/rust/items/snapshots/syn_state_machine__rust__items__extern_blocks__tests__it_matches_item.snap
---
source: src/rust/items/extern_blocks.rs
expression: "insta_match_test!(+ parse\n    ExternalItem<Infallible, Type<Infallible>, Infallible, Ident> : fn\n    with_name(format : * const u8) ;)"
---
Ok(
    Function(
        Rep(
            [],
        ),
        None,
        Function {
            qualifiers: FunctionQualifiers {
                const: false,
                async: false,
                unsafe: false,
                extern_abi: None,
            },
            id: Ident(
                with_name,
            ),
            generic_parameters: None,
            params: Paren(
                FunctionParameters {
                    self_param: None,
                    params: Interlace {
                        values: [
                            FunctionParamPattern(
                                Rep(
                                    [],
                                ),
                                Ty(
                                    Ident(
                                        format,
                                    ),
                                    NoBounds(
                                        RawPointerType(
                                            Const(
                                                NoBounds(
                                                    TypePath(
                                                        HigherOrderPath {
                                                            leading: false,
                                                            segments: Interlace {
                                                                values: [
                                                                    Bare(
                                                                        Id(
                                                                            Ident(
                                                                                u8,
                                                                            ),
                                                                        ),
                                                                    ),
                                                                ],
                                                            },
                                                        },
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ],
                    },
                },
                Span,
            ),
            ret: None,
            where_clause: None,
            content: V0(
                FPunct(
                    Span,
                ),
            ),
        },
    ),
)
